fix cut off images and center applications

--- a/jade/css/jade.css
+++ b/jade/css/jade.css
@@ -113,8 +113,8 @@ header {
     left: 0;
     right: 0;
     overflow: auto;
-    padding: 20px 4px 0px 4px;
-    z-index: 999;
+    padding: 20px 8px 0px 0px;
+    z-index: 1;
 }
 
 .application-box {
@@ -129,6 +129,7 @@ header {
     margin-bottom: 20px;
     padding-left: 1.75rem !important;
     padding-right: 1.75rem !important;
+    padding-top: 8px !important; /* fix cut off images */
 }
 
 nav {
@@ -168,7 +169,7 @@ nav ul {
 .application-box img {
     width: 50px;
     position: absolute;
-    z-index: 1;
+    z-index: 999;
     margin-top: -20px;
     margin-right: -20px;
 }
